--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -75,7 +75,7 @@
 
 - name: Leah Consten
   title: M.Sc.
-  mail: Leah.Consten@uk-essen.de
+  mail: leah.consten@uk-essen.de
   roles: ['tech']
   img: Consten_Leah.jpeg
 
