--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,8 +21,13 @@ jobs:
         ref: main
     - name: Build
       run: |
-        apt update && apt upgrade -y
-        apt install -y ruby-full build-essential zlib1g-dev locales
+        export DEBIAN_FRONTEND=noninteractive
+        apt-get update -qq
+        apt-get install -qqy --no-install-recommends \
+          ruby-full \
+          build-essential \
+          zlib1g-dev \
+          locales
         echo "en_US UTF-8" > /etc/locale.gen
         locale-gen en_US.UTF-8
         export LANG=en_US.UTF-8
@@ -36,7 +41,7 @@ jobs:
           echo "::warning title=Invalid file permissions automatically fixed::$line"
         done
     - name: Upload the created pages artifact
-      uses: actions/upload-pages-artifact@v2
+      uses: actions/upload-pages-artifact@v3
       with:
         name: "github-pages"
         path: "_site/"
@@ -57,4 +62,4 @@ jobs:
     steps:
       - name: Deploy to GitHub Pages
         id: deployment
-        uses: actions/deploy-pages@v3
+        uses: actions/deploy-pages@v4
