--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,8 +17,13 @@ jobs:
       uses: actions/checkout@v4
     - name: Build
       run: |
-        apt update && apt upgrade -y
-        apt install -y ruby-full build-essential zlib1g-dev locales
+        export DEBIAN_FRONTEND=noninteractive
+        apt-get update -qq
+        apt-get install -qqy --no-install-recommends \
+          ruby-full \
+          build-essential \
+          zlib1g-dev \
+          locales
         echo "en_US UTF-8" > /etc/locale.gen
         locale-gen en_US.UTF-8
         export LANG=en_US.UTF-8
