Revert "Update groups.yml"
This reverts commit 18e98fc60b4cf4d12599441fe88d7d1a61fe2dcc.

To restore mml's group entry.

--- a/_data/groups.yml
+++ b/_data/groups.yml
@@ -34,6 +34,17 @@
     zip: 45131
     city: Essen
     
+- name: mml
+  type: rg
+  label: Medical Machine Learning
+  url: https://mml.ikim.nrw/
+  address:
+    name: Girardethaus
+    street: Girardetstr. 2
+    additional: House 2, 3rd floor
+    zip: 45131
+    city: Essen
+
 - name: grk
   type: rg
   label: WisPerMed RTG
