--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -3,6 +3,7 @@
   mail: folker.meyer@uni-due.de
   phone:  +4920172377802
   roles: ['head','board']
+  interests: ['One Health',  'Data Science', 'Metagenomics']
   img: meyer-folker.jpg
 
 - name: Kerstin Bornemann
