adding reference to Miriam

--- a/_data/people/ds.yml
+++ b/_data/people/ds.yml
@@ -28,7 +28,7 @@
   mail: miriam.balzer@uk-essen.de
   title: M.Sc.
   roles: ['phd']
-  img: 
+  img: balzer-miriam.jpg
 
 - name: Katharina Block
   mail: katharina.block@uk-essen.de
