--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -31,3 +31,19 @@ jobs:
         export LC_ALL=en_US.UTF-8
         bundle3.2
         jekyll build
+
+    - uses: actions/upload-artifact@v4
+      with:
+        name: rendered-site
+        path: "_site/"
+
+  link:
+    runs-on: ubuntu-latest
+    needs: build # make sure the artifacts are uploaded first
+    permissions:
+        contents: write # for commenting on your commit
+        pull-requests: write # for commenting on your pr
+    steps:
+      - uses: beni69/artifact-link@v1
+        with:
+          token: ${{ github.token }}
